Creado mediante Colaboratory

--- a/dimorales_QuanconnectTutotials.ipynb
+++ b/dimorales_QuanconnectTutotials.ipynb
@@ -6,7 +6,7 @@
       "name": "dimorales_QuanconnectTutotials.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKbEo/gH+0cWLcMEbfVF8Z",
+      "authorship_tag": "ABX9TyOWeOhaTgYQRvu/Jir7ZyuU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "206d6bed-20a3-44a4-b37a-d8ac38969aa0"
+        "outputId": "a04f8d3a-e22b-4591-fdb9-410e6dd5fa31"
       },
       "source": [
         "my_string1 = 'Welcome to'\n",
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA79axLFFSeg",
-        "outputId": "96473deb-faf3-46ab-e053-5a76d35e2a24"
+        "outputId": "fde80f9e-ec21-4d35-9ba0-946afa24f961"
       },
       "source": [
         "my_int = 2**100000\n",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D8-0f7rDFdBh",
-        "outputId": "7b7c1937-eddc-4181-f43f-1ea2d8fa45d4"
+        "outputId": "cf16bcda-660e-42dd-b0aa-88b0ae2ddb56"
       },
       "source": [
         "my_string = \"2415f\"\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS1qe6qnFd1P",
-        "outputId": "8d783f12-e2d4-47f3-c258-4a844b9d64f8"
+        "outputId": "309a1f8a-5a3f-4589-d28f-d3247e8972f8"
       },
       "source": [
         "my_string = \"300\"\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UbpFUsc5FgqF",
-        "outputId": "abfb7514-9a5b-4bac-88b5-79e03d5b832d"
+        "outputId": "27ce4d75-2963-4613-cdc7-931cbe21286e"
       },
       "source": [
         "my_bool = True\n",
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dcdJRegAFw5A",
-        "outputId": "37781547-3dbe-4a3b-95e2-7589efe01e57"
+        "outputId": "c23656a1-0cb5-474e-bb33-efe2d4b5b501"
       },
       "source": [
         "print(\"Addition \", 3+5)\n",
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MzGKniVAF1fB",
-        "outputId": "7df8785a-f16b-4c99-eb53-d8a159821ba4"
+        "outputId": "0099d40f-16cf-481e-cb5c-a650b7df6785"
       },
       "source": [
         "print(5/7)\n",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lddcquBzGFKT",
-        "outputId": "8dd842ad-6892-4120-87f5-cae907d1938a"
+        "outputId": "1de8ff21-fa25-4dc8-bce8-f56d56c1b8a5"
       },
       "source": [
         "my_list = [1,2,3,'Quant', 'Connect']\n",
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdupOGQIGP3_",
-        "outputId": "c413683e-eff5-4751-8513-9bda2953f513"
+        "outputId": "e014d9bb-fda5-4607-f2c0-a8db1ee92ef3"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLPKGyKXGh8E",
-        "outputId": "9a1dc13f-c232-4b9a-bd47-010a3d67a10d"
+        "outputId": "b3d4d0bd-c1ae-4f23-99ea-d866a448d109"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -309,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FFCiV-OTGuMg",
-        "outputId": "7b501269-a13c-4dac-f9fe-b70c085a0182"
+        "outputId": "256325dc-f6a0-496c-a71c-6fb75ccddbbb"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0XSbTgSAHUmF",
-        "outputId": "e39d1478-8a61-4f12-8bb7-c6c25a8eb298"
+        "outputId": "3418a20e-5aba-4f96-d819-7826287aeb6a"
       },
       "source": [
         "print(my_list[4:])"
@@ -356,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bgD5xPCHZMQ",
-        "outputId": "c353200f-13cd-42b1-b2d5-c0655b31c460"
+        "outputId": "7fe08b6a-1d05-4501-b408-98a925bce0a3"
       },
       "source": [
         "print(my_list[:5])"
@@ -379,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuCUqEepHfJg",
-        "outputId": "b55ecd00-d16a-4356-88de-58bd5fdf3c92"
+        "outputId": "e6948e69-41c1-4893-b995-5322dd186770"
       },
       "source": [
         "my_list = ['Hello', 'world', 'Hello']\n",
@@ -404,7 +404,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bixBZQjGHmVg",
-        "outputId": "86e8471c-e18a-4cdd-d167-1b2eb4708c11"
+        "outputId": "a65bd7f5-d7cb-4841-cc6e-5bd033cf43ef"
       },
       "source": [
         "my_list.remove('world')\n",
@@ -439,7 +439,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUhZC_G2H8xg",
-        "outputId": "7f0f4af7-724f-45c0-9ad0-da9aad6df334"
+        "outputId": "7a6b6873-abdb-4410-cd68-63fbfe285719"
       },
       "source": [
         "my_tuple = ('Welcome','to','hello world')\n",
@@ -463,7 +463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xtps4UnVISVj",
-        "outputId": "1bbec808-c758-43f1-91f9-c28be83f822a"
+        "outputId": "8ccf73df-16ac-40c8-aefb-3a28cdfd0b9c"
       },
       "source": [
         "stock_list = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -476,7 +476,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'AAPL', 'GOOG', 'F', 'IBM', 'FB', 'INSTA'}\n"
+            "{'INSTA', 'FB', 'IBM', 'F', 'AAPL', 'GOOG'}\n"
           ]
         }
       ]
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Wj49mZYJbhV",
-        "outputId": "4a6499bc-5573-45d6-aa70-bdc706d3c9f2"
+        "outputId": "c8919f5b-296d-499f-e24e-511c2ddba7eb"
       },
       "source": [
         "print(my_dic['HELLO'])"
@@ -522,7 +522,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FMHLWwysJ2CX",
-        "outputId": "98b08f20-566a-41b0-8456-99b8af5323fa"
+        "outputId": "ae202f69-3857-4f65-a636-7047227854f9"
       },
       "source": [
         "my_dic['HELLO'] = 'Hello World'\n",
@@ -546,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "czipGKRNKsUi",
-        "outputId": "fed50ef2-4c53-404d-a3f1-a2dd87309733"
+        "outputId": "358270b6-fc94-4058-929c-ec9ce473a720"
       },
       "source": [
         "print(my_dic.keys())"
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rMg9JE7QK8tH",
-        "outputId": "2a11730b-299d-4b3d-8b90-626fa5ef6eea"
+        "outputId": "9406cd12-32dd-4f19-f336-55eda3a3ed19"
       },
       "source": [
         "my_str = 'Welcome to QuantConnect'\n",
@@ -593,7 +593,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BUzEVL_uLOio",
-        "outputId": "7de6b6f5-a4d5-4bf2-9e77-c8992882095a"
+        "outputId": "02cc261d-a926-4555-fe27-be46d4d4d7d4"
       },
       "source": [
         "print('Counting the number of e appears in this sentence'.count('a'))\n",
@@ -609,6 +609,212 @@
             "2\n",
             "17\n",
             "ill the i in this sentence now becomes e\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xGSDtPvxM8jc",
+        "outputId": "2b5cfdfc-d5cf-412b-ac20-96e43086cef3"
+      },
+      "source": [
+        "Time = '2021-10-19 10:38:51'\n",
+        "splited_list = Time.split(' ')\n",
+        "date = splited_list[0]\n",
+        "time = splited_list[1]\n",
+        "print(date)\n",
+        "print(date, time)\n",
+        "hour = time.split(':')[0]\n",
+        "minute=time.split(':')[1]\n",
+        "second=time.split(':')[2]\n",
+        "print(hour)\n",
+        "print(minute)\n",
+        "print(second)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2021-10-19\n",
+            "2021-10-19 10:38:51\n",
+            "10\n",
+            "38\n",
+            "51\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xb5wMX0fOEtI",
+        "outputId": "8dec5942-b108-444d-d84b-efe3f89d9715"
+      },
+      "source": [
+        "my_time = 'Hour:{}, Minute:{}, Second:{}'.format('10','58','40')\n",
+        "print(my_time)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hour:10, Minute:58, Second:40\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0j4PlIb5OgG8",
+        "outputId": "3814cc74-79e2-4e89-b143-7215a83b5531"
+      },
+      "source": [
+        "print('the pi number is %f'%3.14)\n",
+        "print('%s to %s'%('hello','world'))"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the pi number is 3.140000\n",
+            "hello to world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J1gekStmPhop"
+      },
+      "source": [
+        "#2. Logical Operations and Loops"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mb-yIhHUPe-f",
+        "outputId": "379cb11b-8e1a-42e7-9d73-d55ceb310471"
+      },
+      "source": [
+        "print(3 == 5)\n",
+        "print(True == True)\n",
+        "print('hello' != 'world')\n",
+        "print(2**100000 >= 2**99999)\n",
+        "print(3.1416 >= 10/3)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6DvKmLJeQeZI",
+        "outputId": "3e99e1fd-244f-432d-8e2d-b5b7aab2a4f3"
+      },
+      "source": [
+        "print(10 > 5 and 7 > 5)\n",
+        "print(10 > 5 and 7 < 5) \n",
+        "print(10 > 5 or 7 < 5)\n",
+        "print(10 < 5 and 7 < 5)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "njf6XvBSRFtE",
+        "outputId": "d397b2fb-bb8a-4a58-aad6-41663e52a527"
+      },
+      "source": [
+        "print((10 > 5 or 7 < 5) and (10!=7 and 6>5) and not ( 7 < 5 or 6 < 10 and (10!=5 and 6>3)))\n",
+        "print(10 > 5 or 7 < 5 and (10!=7 and 6>5) and not ( 7 < 5 or 6 < 10 and (10!=5 and 6>3)))"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pCqq4c6_R01v",
+        "outputId": "ac5084a6-d447-4a4f-fefc-c63162f63dee"
+      },
+      "source": [
+        "i = 100\n",
+        "if i == 100:\n",
+        "    print('i==100 is True')"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i==100 is True\n"
           ]
         }
       ]
