Creado mediante Colaboratory

--- a/dimorales_QuanconnectTutotials.ipynb
+++ b/dimorales_QuanconnectTutotials.ipynb
@@ -6,7 +6,7 @@
       "name": "dimorales_QuanconnectTutotials.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWeOhaTgYQRvu/Jir7ZyuU",
+      "authorship_tag": "ABX9TyPLulQpPUISLkZqirjG/REK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a04f8d3a-e22b-4591-fdb9-410e6dd5fa31"
+        "outputId": "e79c9a5c-3935-4f18-8f8e-d02d9a083737"
       },
       "source": [
         "my_string1 = 'Welcome to'\n",
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA79axLFFSeg",
-        "outputId": "fde80f9e-ec21-4d35-9ba0-946afa24f961"
+        "outputId": "e27d4c66-8992-4f1d-e0c4-b6128c169ad1"
       },
       "source": [
         "my_int = 2**100000\n",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D8-0f7rDFdBh",
-        "outputId": "cf16bcda-660e-42dd-b0aa-88b0ae2ddb56"
+        "outputId": "46f585db-b5ef-4efe-f015-192618e13084"
       },
       "source": [
         "my_string = \"2415f\"\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS1qe6qnFd1P",
-        "outputId": "309a1f8a-5a3f-4589-d28f-d3247e8972f8"
+        "outputId": "346b7e71-c0b2-4c7e-8523-a5d0553bd2ab"
       },
       "source": [
         "my_string = \"300\"\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UbpFUsc5FgqF",
-        "outputId": "27ce4d75-2963-4613-cdc7-931cbe21286e"
+        "outputId": "c29410df-4e65-47a7-bec7-0c5746e63a2e"
       },
       "source": [
         "my_bool = True\n",
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dcdJRegAFw5A",
-        "outputId": "c23656a1-0cb5-474e-bb33-efe2d4b5b501"
+        "outputId": "7b1b0a90-6666-4945-a5c3-71f38a53e298"
       },
       "source": [
         "print(\"Addition \", 3+5)\n",
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MzGKniVAF1fB",
-        "outputId": "0099d40f-16cf-481e-cb5c-a650b7df6785"
+        "outputId": "197235a8-cd41-45dd-e572-e483eb0b08c9"
       },
       "source": [
         "print(5/7)\n",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lddcquBzGFKT",
-        "outputId": "1de8ff21-fa25-4dc8-bce8-f56d56c1b8a5"
+        "outputId": "d16dc2f9-857d-4a39-b4ec-67e195feab68"
       },
       "source": [
         "my_list = [1,2,3,'Quant', 'Connect']\n",
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdupOGQIGP3_",
-        "outputId": "e014d9bb-fda5-4607-f2c0-a8db1ee92ef3"
+        "outputId": "14ab5c05-75e7-459f-f81b-34d67418ec77"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLPKGyKXGh8E",
-        "outputId": "b3d4d0bd-c1ae-4f23-99ea-d866a448d109"
+        "outputId": "23a3070b-cc3c-4e28-d70d-3d3937e0694e"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -309,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FFCiV-OTGuMg",
-        "outputId": "256325dc-f6a0-496c-a71c-6fb75ccddbbb"
+        "outputId": "9eef5868-07b5-4538-fbc3-f5df5932edef"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0XSbTgSAHUmF",
-        "outputId": "3418a20e-5aba-4f96-d819-7826287aeb6a"
+        "outputId": "ada7a850-f92b-4fc2-fcff-1757307f8b7f"
       },
       "source": [
         "print(my_list[4:])"
@@ -356,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bgD5xPCHZMQ",
-        "outputId": "7fe08b6a-1d05-4501-b408-98a925bce0a3"
+        "outputId": "7a026c83-9747-402f-aee2-85fa470c7854"
       },
       "source": [
         "print(my_list[:5])"
@@ -379,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuCUqEepHfJg",
-        "outputId": "e6948e69-41c1-4893-b995-5322dd186770"
+        "outputId": "d68f2814-59ff-4475-a8c3-37ed40fc1004"
       },
       "source": [
         "my_list = ['Hello', 'world', 'Hello']\n",
@@ -404,7 +404,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bixBZQjGHmVg",
-        "outputId": "a65bd7f5-d7cb-4841-cc6e-5bd033cf43ef"
+        "outputId": "f3c05d03-dc01-444d-c354-9b9dfa9248fe"
       },
       "source": [
         "my_list.remove('world')\n",
@@ -439,7 +439,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUhZC_G2H8xg",
-        "outputId": "7a6b6873-abdb-4410-cd68-63fbfe285719"
+        "outputId": "1aee4172-0053-4188-f9e6-3b39e144c92d"
       },
       "source": [
         "my_tuple = ('Welcome','to','hello world')\n",
@@ -463,7 +463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xtps4UnVISVj",
-        "outputId": "8ccf73df-16ac-40c8-aefb-3a28cdfd0b9c"
+        "outputId": "5d945b89-2054-4d6c-f18a-8a1839adf982"
       },
       "source": [
         "stock_list = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -476,7 +476,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'INSTA', 'FB', 'IBM', 'F', 'AAPL', 'GOOG'}\n"
+            "{'F', 'GOOG', 'AAPL', 'INSTA', 'FB', 'IBM'}\n"
           ]
         }
       ]
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Wj49mZYJbhV",
-        "outputId": "c8919f5b-296d-499f-e24e-511c2ddba7eb"
+        "outputId": "eeb23b88-ea28-411a-f8dd-f584b994401b"
       },
       "source": [
         "print(my_dic['HELLO'])"
@@ -522,7 +522,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FMHLWwysJ2CX",
-        "outputId": "ae202f69-3857-4f65-a636-7047227854f9"
+        "outputId": "2f772340-1588-4339-e1e6-197752250c1e"
       },
       "source": [
         "my_dic['HELLO'] = 'Hello World'\n",
@@ -546,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "czipGKRNKsUi",
-        "outputId": "358270b6-fc94-4058-929c-ec9ce473a720"
+        "outputId": "9f6646f4-1b71-4a3c-e21b-50421ef01dff"
       },
       "source": [
         "print(my_dic.keys())"
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rMg9JE7QK8tH",
-        "outputId": "9406cd12-32dd-4f19-f336-55eda3a3ed19"
+        "outputId": "8ebedcc1-a876-4a7a-835d-dbccf41dd023"
       },
       "source": [
         "my_str = 'Welcome to QuantConnect'\n",
@@ -593,7 +593,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BUzEVL_uLOio",
-        "outputId": "02cc261d-a926-4555-fe27-be46d4d4d7d4"
+        "outputId": "46fd367f-8550-430d-b7ab-22f03540323a"
       },
       "source": [
         "print('Counting the number of e appears in this sentence'.count('a'))\n",
@@ -620,7 +620,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xGSDtPvxM8jc",
-        "outputId": "2b5cfdfc-d5cf-412b-ac20-96e43086cef3"
+        "outputId": "e4f46642-fcce-4277-b928-d14f877b4250"
       },
       "source": [
         "Time = '2021-10-19 10:38:51'\n",
@@ -658,7 +658,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xb5wMX0fOEtI",
-        "outputId": "8dec5942-b108-444d-d84b-efe3f89d9715"
+        "outputId": "0e54a174-8f70-46ab-aadb-b3343107fae1"
       },
       "source": [
         "my_time = 'Hour:{}, Minute:{}, Second:{}'.format('10','58','40')\n",
@@ -682,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0j4PlIb5OgG8",
-        "outputId": "3814cc74-79e2-4e89-b143-7215a83b5531"
+        "outputId": "2551c17e-713a-40f1-e1b2-5736b2eaa21e"
       },
       "source": [
         "print('the pi number is %f'%3.14)\n",
@@ -716,7 +716,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mb-yIhHUPe-f",
-        "outputId": "379cb11b-8e1a-42e7-9d73-d55ceb310471"
+        "outputId": "7ce41bb2-c6ef-4e54-ff3f-0b6415d8dd91"
       },
       "source": [
         "print(3 == 5)\n",
@@ -747,7 +747,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6DvKmLJeQeZI",
-        "outputId": "3e99e1fd-244f-432d-8e2d-b5b7aab2a4f3"
+        "outputId": "e0c301b2-38b4-45d0-9ef2-2ac9353c6976"
       },
       "source": [
         "print(10 > 5 and 7 > 5)\n",
@@ -776,7 +776,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "njf6XvBSRFtE",
-        "outputId": "d397b2fb-bb8a-4a58-aad6-41663e52a527"
+        "outputId": "d51d5ec2-0ee0-44f0-aff8-7de6502a5adc"
       },
       "source": [
         "print((10 > 5 or 7 < 5) and (10!=7 and 6>5) and not ( 7 < 5 or 6 < 10 and (10!=5 and 6>3)))\n",
@@ -801,7 +801,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pCqq4c6_R01v",
-        "outputId": "ac5084a6-d447-4a4f-fefc-c63162f63dee"
+        "outputId": "6e89d099-ef1b-40d4-c8ce-0ae2a0592f92"
       },
       "source": [
         "i = 100\n",
@@ -815,6 +815,233 @@
           "name": "stdout",
           "text": [
             "i==100 is True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NVwqeDydSU9P",
+        "outputId": "081ba8a1-7bc7-4d9b-dfac-81ce23dde615"
+      },
+      "source": [
+        "p = 10 > 15\n",
+        "q = 7 > 20\n",
+        "if p and q:\n",
+        "    print('p and q is true')\n",
+        "elif p and not q:\n",
+        "    print('q is false')\n",
+        "elif q and not p:\n",
+        "    print('p is false')\n",
+        "else:\n",
+        "    print('None of p and q is true')"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None of p and q is true\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9I9qTAunShX_",
+        "outputId": "c2db23a3-ae42-4685-e573-9aedf43c488b"
+      },
+      "source": [
+        "i = 0\n",
+        "while i < 2**13:\n",
+        "    print(i)\n",
+        "    i += 100"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "100\n",
+            "200\n",
+            "300\n",
+            "400\n",
+            "500\n",
+            "600\n",
+            "700\n",
+            "800\n",
+            "900\n",
+            "1000\n",
+            "1100\n",
+            "1200\n",
+            "1300\n",
+            "1400\n",
+            "1500\n",
+            "1600\n",
+            "1700\n",
+            "1800\n",
+            "1900\n",
+            "2000\n",
+            "2100\n",
+            "2200\n",
+            "2300\n",
+            "2400\n",
+            "2500\n",
+            "2600\n",
+            "2700\n",
+            "2800\n",
+            "2900\n",
+            "3000\n",
+            "3100\n",
+            "3200\n",
+            "3300\n",
+            "3400\n",
+            "3500\n",
+            "3600\n",
+            "3700\n",
+            "3800\n",
+            "3900\n",
+            "4000\n",
+            "4100\n",
+            "4200\n",
+            "4300\n",
+            "4400\n",
+            "4500\n",
+            "4600\n",
+            "4700\n",
+            "4800\n",
+            "4900\n",
+            "5000\n",
+            "5100\n",
+            "5200\n",
+            "5300\n",
+            "5400\n",
+            "5500\n",
+            "5600\n",
+            "5700\n",
+            "5800\n",
+            "5900\n",
+            "6000\n",
+            "6100\n",
+            "6200\n",
+            "6300\n",
+            "6400\n",
+            "6500\n",
+            "6600\n",
+            "6700\n",
+            "6800\n",
+            "6900\n",
+            "7000\n",
+            "7100\n",
+            "7200\n",
+            "7300\n",
+            "7400\n",
+            "7500\n",
+            "7600\n",
+            "7700\n",
+            "7800\n",
+            "7900\n",
+            "8000\n",
+            "8100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xvDju2-zTL7d",
+        "outputId": "a9445174-f4b2-4d03-c496-97e13fbf1d8b"
+      },
+      "source": [
+        "for i in [1,'hello',3,'Quan',5]:\n",
+        "    print(i)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "hello\n",
+            "3\n",
+            "Quan\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "74B4wU2NTUyp",
+        "outputId": "5f64d9a9-87bd-4005-a2d1-a6fbf374582c"
+      },
+      "source": [
+        "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
+        "selected = ['AAPL','IBM']\n",
+        "new_list = []\n",
+        "for i in stocks:\n",
+        "    if i not in selected:\n",
+        "        new_list.append(i)\n",
+        "print(stocks)\n",
+        "print(new_list)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['AAPL', 'GOOG', 'IBM', 'AAPL', 'IBM', 'FB', 'F', 'GOOG', 'F', 'INSTA']\n",
+            "['GOOG', 'FB', 'F', 'GOOG', 'F', 'INSTA']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mNcxbfhDT_Xx",
+        "outputId": "2ff2288c-c8f8-421a-c18c-1daf4d5f75e3"
+      },
+      "source": [
+        "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
+        "for i in stocks:\n",
+        "    print(i)\n",
+        "    if i == 'IBM':\n",
+        "        break"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AAPL\n",
+            "GOOG\n",
+            "IBM\n"
           ]
         }
       ]
